fix: drastic layout shift for mobile (hide hero image, horizontal swipe portfolio)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,4 +94,12 @@ body {
       background-size: 80px 80px;
     }
   }
+
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
